--- a/react_intro/src/Person/Person.css
+++ b/react_intro/src/Person/Person.css
@@ -6,3 +6,12 @@
     padding: 16px;
     text-align: center;
 }
+.Person input[type=text]{
+    border: 1px solid #DDDDDD;
+    padding: 3px;
+    outline: none;
+}
+.Person input[type=text]:focus{
+    box-shadow: 0 0 5px rgba(81,203,238,1);
+    border: 1px solid rgba(81,203,238,1);
+}
