Added CSS styling through CSS modules

--- a/react_intro/src/Person/Person.module.css
+++ b/react_intro/src/Person/Person.module.css
@@ -15,3 +15,8 @@
     box-shadow: 0 0 5px rgba(81,203,238,1);
     border: 1px solid rgba(81,203,238,1);
 }
+@media (min-width: 500px){
+    .Person{
+        width: 450px;
+    }
+}
